--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "Lluis Agusti <hi@llu.lu>"
   ],
   "dependencies": {
-    "@next-auth/mongodb-adapter": "^1.1.1",
-    "mongodb": "^4.12.1",
-    "next": "latest",
-    "next-auth": "latest",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "mongodb": "^6.6.1",
+    "next": "^14.1.0",
+    "next-auth": "^4.24.7",
     "nodemailer": "^6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -30,5 +30,8 @@
     "@types/node": "^17",
     "@types/react": "^18.0.15",
     "typescript": "^4"
+  },
+  "overrides": {
+    "mongodb": "^6.6.1"
   }
 }
